--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="index.css" />
-    <script type="importmap">
-      {
-        "imports": {
-          "@google/genai": "https://esm.sh/@google/genai@^1.0.0",
-          "lit/": "https://esm.sh/lit@^3.3.0/",
-          "lit": "https://esm.sh/lit@^3.3.0"
-        }
-      }
-    </script>
-  </head>
+    <link rel="stylesheet" href="index.css">
+  <script type="importmap">
+{
+  "imports": {
+    "lit/": "https://esm.sh/lit@^3.3.0/",
+    "lit": "https://esm.sh/lit@^3.3.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.0.0"
+  }
+}
+</script>
+</head>
   <body>
     <script src="index.tsx" type="module"></script>
   </body>
 </html>
+<link rel="stylesheet" href="index.css">
+<script src="index.tsx" type="module"></script>
+<link rel="stylesheet" href="index.css">
+<script src="index.tsx" type="module"></script>
+<link rel="stylesheet" href="index.css">
+<script src="index.tsx" type="module"></script>
 <link rel="stylesheet" href="index.css">
 <script src="index.tsx" type="module"></script>
